# shade_runner

./: CMakeLists.txt  TODO.txt
kernels/: 20200423.frag.glsl  GDF_v0.frag.glsl  aa_sandbox.frag.glsl  chisel_experiment.frag.glsl  clouds_v0.frag.glsl  clouds_v1.frag.glsl  clouds_v2.frag.glsl  clouds_v3.frag.glsl  clouds_v4.frag.glsl  cylinder_exp.frag.glsl  ghost_v0.frag.glsl  glyphs_v0.frag.glsl  godrays_v0.frag.glsl  hello_world.frag.glsl  hexagon_v0.frag.glsl  mandelbrot.frag.glsl  modsphere_v0.frag.glsl  modsphere_v1.frag.glsl  raymarching_exp.frag.glsl  resolution_demo.frag.glsl  rings_alpha.frag.glsl  rings_v0.frag.glsl  rm_shapes.frag.glsl  romanesco_v0.frag.glsl  romanesco_v1.frag.glsl  shadows_v0.frag.glsl  shadows_v1.frag.glsl  shadows_v2.frag.glsl  signal_print.frag.glsl  simplex_transfo.frag.glsl  simplex_transfo.glsl  simplex_v0.frag.glsl  simplex_v1.frag.glsl  simplex_v2.frag.glsl  time_demo.frag.glsl  transfogizmo_demo.frag.glsl  turntable.geom.glsl  turntable.vert.glsl
sources/inc/appbase/: imgui_layer.h  layer_mediator.h  state.h
sources/inc/oglbase/: error.h  framebuffer.h  handle.h  shader.h
sources/inc/shaderunner/: shader_cache.h  shaderunner.h
sources/inc/uibase/: gizmo_layer.h  imguicontext.h  mat.h
sources/inc/utility/: callback.h  clock.h  file.h  timer.h
sources/src/appbase/: imgui_layer.cc  layer_mediator.cc
sources/src/oglbase/: error.cc  framebuffer.cc  handle.cc  shader.cc
sources/src/shaderunner/: gizmo.cc  shader_cache.cc  shaderunner.cc
sources/src/shaderunner/shaders/: box.geom.h  entry_point.frag.h  entry_point.vert.h  fullscreen_quad.vert.h  fullscreen_tri.vert.h  gizmo.frag.h  noop.vert.h  white.frag.h
sources/src/uibase/: gizmo_layer.cc  imguicontext.cc
sources/src/uibase/shaders/: box.geom.h  gizmo.frag.h  transfo.geom.h  uPosition.vert.h
sources/src/utility/: clock.cc  file.cc  timer.cc
sources/src/win32_bootstrap/: main.cc
sources/src/xlib_bootstrap/: main.cc
